# household_expenditure_pca

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
household_expenditure_pca/: __init__.py  dataset.py  features.py  plots.py
household_expenditure_pca/modeling/: predict.py  train.py
household_expenditure_pca/src/: jacobi.py
household_expenditure_pca/utils/: plotting.py
notebooks/: 1.0_amb_initial_data_exploration.ipynb  1.0_ty_initial_data_exploration.ipynb  2.0_ad_principal_component_analysis.ipynb
