[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "household_expenditure_pca"
version = "0.0.1"
description = "An application of the PCA method on the weekly household expenditures dataset"
authors = [
  { name = "am.bendou;y.talbi;f.benzaima;ate.dallaa" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["household_expenditure_pca"]
force_sort_within_sections = true
